<!--Section RNA
Naman Shah , n01392496, Section RNA
Aryan Sood , n01393003, Section RNA
Vishesh Bansal, n01395119, Section RNA
Jaskirat Singh , N01403975 , Section RNB
-->

<resources>
    <string name="app_name">BusCare+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!--    <string name="menu_gallery">Gallery</string>-->
    <string name="menu_safety">Safety</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aboutus">About us</string>
    <string name="logout">Log Out</string>
    <string name="maintenance">Maintenance</string>
    <string name="safety">Safety</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language:</string>
    <string name="english_language">English</string>
    <string name="french_language">French</string>
    <string name="portrait_lock">Portrait Lock:</string>
    <string name="dark_theme">Dark Theme:</string>
    <string name="userPass_8_error">Password must be more than 8 characters long</string>
    <string name="empty_email_error">Value can\'t be empty</string>
    <string name="userPass_empty_error">Password cannot be empty</string>
    <string name="invalid_email_error">Invalid Email Address</string>

    <string name="forgot_password_text"><b><u>Forgot Password?</u></b></string>
    <string name="register_text"><b><u>Register Now</u></b></string>
    <string name="it_support">To get access to the User Manual of the app, please click on the Download button. For I.T. Support, Please contact us by clicking the below call icon button</string>
    <string name="help">Help</string>
    <string name="question_1">Q. What is BusCare+ ?</string>
    <string name="answer_1">A. BusCare+ is an application that is designed to provide safety to the passengers and provide up to date info about the maintenance of the bus.</string>
    <string name="question_2">Q. What does the maintenance service includes in BusCare+ ?</string>
    <string name="answer_2">A. The maintenance service contains 2 features:</string>
    <string name="answer_2_a">- The temperature inside bus is convenient for the passengers</string>
    <string name="answer_2_b">- The CO2 emission inside bus is under the prescribed limits</string>
    <string name="question_3">Q. What does the safety service includes in BusCare+ ?</string>
    <string name="answer_3">A. The safety service contains 2 features:</string>
    <string name="answer_3_a">- Passenger count, to keep the number of passengers in the bus under the predetermined limits</string>
    <string name="answer_3_b">- Speed of the bus, to make sure the bus isn\'t overspeeding </string>
    <string name="msg1">Welcome to BusCare+</string>
    <string name="msg2">Name of User</string>
    <string name="msg3">Hope you have a wonderful day!!</string>
    <string name="Or_text">OR</string>
    <string name="menu_maintenance">Maintenance</string>
    <string name="feedback">Feedback</string>
    <string name="username">Full Name</string>
    <string name="Rating">Rating</string>
    <string name="pno">Phone No.</string>
    <string name="Comments">Comments</string>
    <string name="model">Device Model</string>
    <string name="submit">Submit</string>
    <string name="firstnameTitle">FirstName</string>
    <string name="cityTitle">City</string>
    <string name="provinceTitle">Province</string>
    <string name="countryTitle">Country</string>
    <string name="addressTitle">Address</string>
    <string name="personal_infoTitle">Personal Info</string>
    <string name="ageTitle">Age</string>
    <string name="last_nameTitle">LastName</string>
    <string name="check">Province</string>
    <string name="phoneTitle">Phone</string>
    <string name="number">+1234567890</string>
    <string name="tel">Tel</string>
    <string name="pg">Permission Granted</string>
    <string name="pd">Permission Denied</string>
    <string name="my_account">My Account</string>
    <string name="notification_main">Thank you for providing your feedback!</string>
    <string name="notification_heading">Review Sent</string>
    <string name="ques_1">Q- Who are we?</string>
    <string name="heading_aboutus">Coding Comrades</string>
    <string name="ans_1">A- We are a group of students studying Computer Engineering Technology in Humber College situated in Toronto, Canada. </string>
    <string name="ques_2">Q- How did we decide this idea?</string>
    <string name="ans_2">A- We decided this app because we wanted to create an app that simplifies the task for bus operators to maintain the busses and track any malfunctions that may be induced due to equipment failure</string>
    <string name="team">Team </string>
    <string name="humber_college">Humber college</string>
    <string name="actualGreen">0xFF3BDF35</string>
    <string name="toast_login_fail">Failure, try again</string>
    <string name="firebase_login_fail">Uh oh Something went wrong!!, Try Again</string>
    <string name="validating_msg">Validating</string>
    <string name="remember">remember</string>
    <string name="contact_number">+1234567890</string>
    <string name="radioMetricBtnText">Metric(km/hr)</string>
    <string name="radioImperialBtnText">Imperial(mph)</string>
    <string name="login_label">Login</string>
    <string name="emailAddressTitle">Email Address</string>
    <string name="passwordTitle">Password</string>
    <string name="rememberLabel">"Remember me "</string>
    <string name="firebaseKeyFirstName">FirstName</string>
    <string name="firebaseKeyLastName">LastName</string>
    <string name="firebaseKeyPhone">Phone</string>
    <string name="firebaseKeyAge">Age</string>
    <string name="firebaseKeyAddress">Address</string>
    <string name="firebaseKeyCity">City</string>
    <string name="firebaseKeyProvince">Province</string>
    <string name="firebaseKeyCountry">Country</string>
    <string name="exit">Exit!!</string>
    <string name="exitmessage">Are you to exit?</string>
    <string name="naman_shah">Naman Shah</string>
    <string name="vishesh_bansal">Vishesh Bansal</string>
    <string name="aryan_sood">Aryan Sood</string>
    <string name="jaskirat_singh">Jaskirat Singh</string>
    <string name="content_description_of_naman">Profile picture of Naman</string>
    <string name="content_description_of_vishesh">Profile picture of Vishesh</string>
    <string name="content_description_of_aryan">Profile picture of Aryan</string>
    <string name="content_description_of_jaskirat">Profile picture of Jaskirat</string>
    <string name="content_description_of_tempbtn">Temperature Status</string>
    <string name="content_description_of_passengerbtn">Passenger Count Status</string>
    <string name="content_description_of_speedbtn">Speed Status</string>
    <string name="content_description_of_carbonbtn">Co2 Status</string>
    <string name="bus_927">927</string>
    <string name="toast_login_success">Successfully Logged In !</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="units_of_data">Select Units of data:</string>
    <string name="threshold_values">Set Threshold values:</string>
    <string name="max_speed">Maximum Speed:</string>
    <string name="max_people">Maximum people:</string>
    <string name="speed_of_bus">Speed of Bus</string>
    <string name="number_of_people">Number of People:</string>
    <string name="temperature_in_celsius">Temperature:</string>
    <string name="carbondioxide_levels">CarbonDioxide Levels:</string>
    <string name="empty_review">Please fill in all the required fields.</string>
    <string name="save_btn_label">Save</string>
    <string name="my_acc_info_saved_msg">Information Saved!!</string>
    <string name="select_bus_no">Select Bus No:</string>
    <string name="last_update">Last Updated at</string>
    <string name="user_manual">User Manual</string>
    <string name="path">accessPath</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYnVzY2FyZSIsImEiOiJjbDNjNjc3eW4wMWdxM2twMnMxYWNvbWVmIn0.KZXcuat0nurw1i6QD9Sfbw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>