<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    <item
        android:id="@+id/myaccount"
        android:orderInCategory="100"
        android:title="@string/my_account"
        app:showAsAction="always"
        app:actionLayout = "@menu/custom_menu_layout"
        android:icon="@drawable/ic_baseline_account_circle_24"/>
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutus"
        android:orderInCategory="100"
        android:title="@string/aboutus"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>