<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.AboutusActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/heading_aboutus"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ques_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ques_1"
        android:layout_width="349dp"
        android:layout_height="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/ques_1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ans_1"
        android:layout_width="374dp"
        android:layout_height="65dp"
        android:layout_marginTop="108dp"
        android:text="@string/ans_1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/ques_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ques_2"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="172dp"
        android:text="@string/ques_2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ans_2"
        android:layout_width="373dp"
        android:layout_height="77dp"
        android:scrollbars="vertical"
        android:text="@string/ans_2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/naman_link"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/menu_blue"
        android:text="@string/naman_shah"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vishesh_link"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/menu_blue"
        android:text="@string/vishesh_bansal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/naman_link"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aryan_link"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="676dp"
        android:backgroundTint="@color/menu_blue"
        android:text="@string/aryan_sood"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jaskirat_link"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginTop="676dp"
        android:backgroundTint="@color/menu_blue"
        android:text="@string/jaskirat_singh"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:text="@string/team"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <ImageView
        android:id="@+id/namanimage"
        android:layout_width="113dp"
        android:layout_height="120dp"
        android:contentDescription="@string/content_description_of_naman"
        app:layout_constraintBottom_toTopOf="@+id/naman_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/jaskiratimage"
        android:layout_width="134dp"
        android:layout_height="119dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/jaskirat_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naman_link"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/jk"
        android:contentDescription="@string/content_description_of_jaskirat"
        />

    <ImageView
        android:id="@+id/visheshimage"
        android:layout_width="121dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/namanimage"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/vish"
        android:contentDescription="@string/content_description_of_vishesh"/>

    <ImageView
        android:id="@+id/aryanimage"
        android:layout_width="113dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/aryan_link"
        app:layout_constraintEnd_toStartOf="@+id/jaskiratimage"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vishesh_link"
        app:layout_constraintVertical_bias="0.969"
        app:srcCompat="@drawable/ary"
        android:contentDescription="@string/content_description_of_aryan"/>

</androidx.constraintlayout.widget.ConstraintLayout>